[package]
name = "algo-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "hello"
path = "src/main.rs"

[profile.release]
opt-level = 3
debug = 0
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"

[features]
default = []
# default = ["serde"]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0.210", optional = true, features = ["derive"] }

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"
serde_json = "1.0.128"

[[test]]
name = "test_segment_tree"
path = "tests/test_segment_tree.rs"
harness = true

[[bench]]
name = "bench_segment_tree"
harness = false
